Remember column ordering in main window between sessions, in case the user reorders the columns. (Except for the message column, which is always set to the last column.)

Prevent the alarm type column from being resized, to prevent refresh problems.

BUG: 130298
BUG: 130297


svn path=/branches/KDE/3.5/kdepim/; revision=561356